--- a/index.htm
+++ b/index.htm
@@ -59,7 +59,7 @@
 <body style="text-align: center;">
 
     <h1>Koalas ou Coalas \o/</h1>
-    <img src="https://cdn.pixabay.com/photo/2017/11/02/10/37/australia-2910662_960_720.jpg" style="width: 56%;" alt="Um Coala em cima de uma árvore">
+    <img src="https://images.unsplash.com/photo-1613416178357-e061333fe72f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80" style="width: 56%;" alt="Um Coala em cima de uma árvore">
     <img src="https://i.imgur.com/hgWE4Bv.png" style="width: 25%;" alt="Outro Koala na natureza">
 
     <p>O coala (nome científico: Phascolarctos cinereus) é um mamífero marsupial herbívoro arbóreo nativo da Austrália.
